fix: navigation buttons too much spacing

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -43,7 +43,7 @@
 }
 
 #toolbar-navigation-buttons.can-go-forward:hover {
-  width: 4.25rem;
+  width: max-content;
 }
 
 body.is-edit-mode #toolbar-navigation-buttons {
@@ -54,12 +54,13 @@ body.is-edit-mode #toolbar-navigation-buttons {
 #forward-button {
   opacity: 1;
   transition: none;
-  padding: 0 0.6rem;
+  padding: 0;
 }
 #back-button {
-  padding-left: 0.4rem;
+  padding-left: 0.5rem;
 }
 #forward-button {
+  padding-right: 0.5rem;
 }
 #back-button:disabled,
 #forward-button:disabled {
